--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </ul>
     </nav>
     <br>
+    <div class="container">
     <h3> 
         A vida no campo é linda, veja a seguir
     </h3>
@@ -48,7 +49,7 @@
      Viver no campo é como ter um pedacinho do paraíso aqui na Terra. É um lugar onde a beleza de Deus está em cada detalhe, e onde a vida simples se torna uma verdadeira celebração da criação.
 </p>
 </div>
-
+</div>
 
 
 
