--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"> </div>
+    <div class="container">
     <header>
         <h1> Bem vindo ao Mundo das Aventuras de Gabs </h1>
     </header>
@@ -37,7 +37,7 @@
      </div>
 
 
-    <p class="centralizado">
+    <p class="texto">
         Viver no campo é como estar em um lugar onde a natureza e Deus se encontram e se abraçam. É um lugar onde a simplicidade se transforma em beleza pura.
 <br>
         Quando chove, é como se Deus estivesse dando um presente para a terra. Cada gota d’água faz com que tudo fique mais fresco e verde, renovando a vida ao nosso redor.<br> E quando o sol aparece, ele aquece e ilumina tudo com uma luz incrível, fazendo com que as paisagens se tornem ainda mais lindas. <BR> O nascer e o pôr do sol são verdadeiros espetáculos, pintando o céu com cores que nos lembram da grandeza de Deus.
@@ -49,7 +49,7 @@
      Viver no campo é como ter um pedacinho do paraíso aqui na Terra. É um lugar onde a beleza de Deus está em cada detalhe, e onde a vida simples se torna uma verdadeira celebração da criação.
 </p>
 </div>
-</div>
+
 
 
 
